[package]
name = "silica_sort_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "_silica_sort"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = "0.20.0"
rayon = "1.8.0"
memmap2 = "0.9.0"
raw-cpuid = "11.0.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
